<resources>
    <string name="app_name">SdkSrc</string>
    <string name="qm_hint_account"><![CDATA[账号/手机号]]></string>
    <string name="qm_hint_login_pwd">密码</string>
    <string name="qm_hint_account_phone">请输入手机号码</string>
    <string name="qm_hint_pwd">请输入密码</string>
    <string name="qm_hint_old_pwd">输入旧密码</string>
    <string name="qm_hint_new_pwd">输入新密码</string>
    <string name="qm_hint_new_pwd2">再次输入新密码</string>
    <string name="qm_btn_quickreg">快速注册</string>
    <string name="qm_btn_login">进入游戏</string>
    <string name="qm_title_login">用户登录</string>
    <string name="qm_title_reg">用户注册</string>
    <string name="qm_title_usercenter">用户中心</string>
    <string name="qm_title_nickname">修改昵称</string>
    <string name="qm_title_pwd">修改密码</string>
    <string name="qm_title_bind">绑定手机</string>
    <string name="qm_title_paylist">充值记录</string>
    <string name="qm_btn_regcommit">确认提交</string>
    <string name="qm_hint_captcha">请输入验证码</string>
    <string name="qm_btn_regfast">快速注册</string>
    <string name="qm_btn_regtel">手机注册</string>
    <string name="qm_pay">支付</string>
    <string name="qm_pay_money">付款金额：</string>
    <string name="qm_pay_way_select">请选择支付方式</string>
    <string name="qm_pay_goods_name">商品名：</string>
    <string name="qm_pay_goods_detail">商品描述：</string>
    <string name="qm_btn_phonecaptcha">发送验证码</string>
    <string name="qm_hint_phonecode">请输入手机验证码</string>
    <string name="qm_title_chooseaccount">请选择要登录的账号</string>
    <string name="qm_btn_loginotheraccount">登录其他账号</string>
    <string name="qm_btn_switchaccount">切换账号</string>
    <string name="qm_btn_modify_confirm">确认修改</string>
    <string name="qm_float_menu_account">账号</string>
    <string name="qm_float_menu_gift">礼包</string>
    <string name="qm_float_menu_feedback">反馈</string>
    <string name="qm_float_menu_help">帮助</string>
    <string name="qm_float_menu_forum">论坛</string>
    <string name="qm_setting_account">账号：</string>
    <string name="qm_setting_nickname">昵称：</string>
    <string name="qm_setting_modifypwd">修改密码</string>
    <string name="qm_setting_unbind_state">绑定手机</string>
    <string name="qm_setting_unbind_info">(可随时找回密码)</string>
    <string name="qm_setting_pay_record">充值记录</string>
    <string name="qm_setting_gift">礼包</string>
    <string name="qm_setting_anto_login">自动登录游戏</string>
</resources>
