<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/dialog_common"
    android:orientation="vertical" >

    <FrameLayout
        style="@style/title_common_container"
        android:layout_marginBottom="0dp"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/qmCloseDialog"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="left|center_vertical"
            android:background="@drawable/qm_btn_back_selector" />
        <TextView
            style="@style/title_common_text"
            android:text="@string/qm_title_reg"
            android:layout_gravity="center"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginBottom="10dp">
        <RadioGroup
            android:id="@+id/qmRegRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal" >
            <RadioButton
                android:id="@+id/qmRegFastRadio"
                android:text="@string/qm_btn_regfast"
                style="@style/radio_common"
                android:background="@drawable/qm_radio_blue_selector"
                android:textColor="@color/radio_blue_text_selector" />
            <RadioButton
                android:id="@+id/qmRegTelRadio"
                android:text="@string/qm_btn_regtel"
                style="@style/radio_common"
                android:background="@drawable/qm_radio_green_selector"
                android:textColor="@color/radio_green_text_selector" />
        </RadioGroup>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/qmRegFastContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="0px"
            android:layout_height="0px"/>

        <LinearLayout
            style="@style/input_common_container"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/qmRegFastPwd"
                android:hint="@string/qm_hint_pwd"
                style="@style/input_common_edit"
                android:inputType="textEmailAddress"
                android:layout_weight="2" />

        </LinearLayout>

        <Button
            android:id="@+id/qmRegFastCommit"
            style="@style/button_common_green"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/qm_btn_regcommit" />

    </LinearLayout>

    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:id="@+id/qmRegTelContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            style="@style/input_common_container"
            android:orientation="horizontal">

            <com.qmyxzs.sdk.ui.controls.EmailAutoCompleteTextView
                android:id="@+id/qmRegTelAccount"
                android:hint="@string/qm_hint_account_phone"
                style="@style/input_common_edit"
                android:inputType="phone"
                android:nextFocusForward="@+id/qmRegTelPwd"/>

        </LinearLayout>

        <LinearLayout
            style="@style/input_common_container"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/qmRegTelPwd"
                android:hint="@string/qm_hint_pwd"
                style="@style/input_common_edit"
                android:inputType="textEmailAddress"
                android:layout_weight="2" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/qmRegTelCaptchaConainer"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                style="@style/input_common_container"
                android:layout_weight="2"
                android:layout_marginRight="5dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/qmRegTelEditCaptcha"
                    android:hint="@string/qm_hint_captcha"
                    style="@style/input_common_edit"
                    android:inputType="textEmailAddress"
                    android:layout_weight="2"
                    android:maxLength="4" />
            </LinearLayout>

            <ImageView
                android:id="@+id/qmRegTelCaptchaView"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="20dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                style="@style/input_common_container"
                android:layout_weight="2"
                android:layout_marginRight="5dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/qmRegTelCode"
                    android:hint="@string/qm_hint_phonecode"
                    style="@style/input_common_edit"
                    android:inputType="number"
                    android:layout_weight="2"
                    android:maxLength="6" />
            </LinearLayout>

            <Button
                android:id="@+id/qmRegSendTelCode"
                style="@style/button_common_green"
                android:textSize="@dimen/text_size_16"
                android:layout_width="120dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="20dp"
                android:text="@string/qm_btn_phonecaptcha" />
        </LinearLayout>

        <Button
            android:id="@+id/qmRegTelCommit"
            style="@style/button_common_green"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/qm_btn_regcommit" />

    </LinearLayout>

</LinearLayout>
