<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/dialog_common"
    android:orientation="vertical" >

    <FrameLayout
        style="@style/title_common_container"
        android:orientation="horizontal" >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/qm_logo"/>
            <TextView
                style="@style/title_common_text"
                android:layout_weight="2"
                android:text="@string/qm_title_login"/>
        </LinearLayout>

        <Button
            android:id="@+id/qmCloseDialog"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="right|center_vertical"
            android:background="@drawable/qm_btn_close_selector"/>

    </FrameLayout>

    <LinearLayout
        style="@style/input_common_container"
        android:orientation="horizontal">

        <com.qmyxzs.sdk.ui.controls.EmailAutoCompleteTextView
            android:id="@+id/qmLoginAccount"
            android:hint="@string/qm_hint_account"
            style="@style/input_common_edit"
            android:inputType="textEmailAddress"
            android:nextFocusForward="@+id/qmLoginPwd"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/dropAccountList"
            android:src="@drawable/qm_arrow_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="5dp"/>
    </LinearLayout>

    <LinearLayout
        style="@style/input_common_container"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/qmLoginPwd"
            android:hint="@string/qm_hint_login_pwd"
            style="@style/input_common_edit"
            android:inputType="textPassword"
            android:layout_weight="2"
            android:password="true" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/qmLoginCaptchaConainer"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            style="@style/input_common_container"
            android:layout_weight="2"
            android:layout_marginRight="5dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/qmLoginCaptcha"
                android:hint="@string/qm_hint_captcha"
                style="@style/input_common_edit"
                android:inputType="textEmailAddress"
                android:layout_weight="2"
                android:maxLength="4" />
        </LinearLayout>

        <ImageView
            android:id="@+id/qmLoginCaptchaView"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="20dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/qmLoginForgetPwd"
        android:text="忘记密码?"
        android:textColor="@color/light_blue"
        android:background="@null"
        android:textSize="@dimen/text_size_16"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginRight="20dp"
        android:layout_gravity="right"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/qmLoginReg"
            android:layout_weight="1"
            style="@style/button_common_blue"
            android:layout_height="36dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="8dp"
            android:text="@string/qm_btn_quickreg" />
        <Button
            android:id="@+id/qmLoginEnter"
            android:layout_weight="1"
            style="@style/button_common_green"
            android:layout_height="36dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="20dp"
            android:text="@string/qm_btn_login" />
    </LinearLayout>

</LinearLayout>
